--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -654,18 +654,16 @@
 
 
 
-    <form id="formation" method="POST" action="/ADD-POTM"></form>
+    
     <div id="container87">
-      
-      <input type="text" id="file33" >
-
+      <form id="formation" method="POST" action="/Master/ADD-POTM">
       <div class="img-area" data-img="">
         <i class='bx bxs-cloud-upload icon'></i>
         <h3>Upload Image</h3>
         <p>Image size must be less than <span>2MB</span></p>
-        
+        <input type="text" id="file33" name="image"> 
       </div>
-      <label for="file" class="select-image">Select Image</label>
+      <P>Link</P><label for="file" class="select-image">Select Image</label> 
  
 
         <div class="player_name">
@@ -709,26 +707,21 @@
       
         <br>
         <button class="add-event" type="submit">Add Nominees</button>
-      </form>
+     
 
-
+        </form>
 
     </div>
 
-   
 
       
 
-       
-
-      </form>
 
 
 
 
 
-
-    </div>
+   
 
 
 
