--- a/public/Store.css
+++ b/public/Store.css
@@ -51,6 +51,99 @@ scroll-behavior: smooth;
     font-size: 20px;
  }
  
+
+ /* cart */
+.cart{
+    position: fixed;
+    top:0;
+    left: 100%;
+    width: 500px;
+    background-color: #453E3B;
+    height: 100vh;
+    transition: 0.5s;
+ }
+ .active .cart{
+    left: calc(100% - 500px);
+ }
+ .active .container{
+   transform: translateX(-200px);
+ }
+ .cart h1{
+    color: #E8BC0E;
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+ }
+ .cart .checkOut{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+ 
+ }
+ .cart .checkOut div{
+    background-color: #E8BC0E;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+ }
+ .cart .checkOut div:nth-child(2){
+    background-color: #1C1F25;
+    color: #fff;
+ }
+ .listcart li{
+    display: grid;
+    grid-template-columns: 100px repeat(3, 1fr);
+    color: #fff;
+    row-gap: 10px;
+ }
+ .listcart li div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+ .listcart li img{
+    width: 90%;
+ }
+ .listcart li button{
+    background-color: #fff5;
+    border: none;
+ }
+ .listcart .count{
+    margin: 0 10px;
+ }
+ 
+ .shopping{
+    position: relative;
+    text-align: right;
+    left: 1580px;
+    top: -18px;
+ }
+ .shopping img{
+    width: 40px;
+ }
+ .shopping span{
+    background: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    position: absolute;
+    top: -5px;
+    left: 80%;
+    padding: 3px 10px;
+ }
+ 
+ /* end cart */
  
  
  .LOGO h1 {
