--- a/views/Store.ejs
+++ b/views/Store.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,16 @@
     <link href="Store.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="icon" href="/materials/Icon.png" type="image/x-icon">
-<script src="/script/Store.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="icon" href="/materials/Icon.png" type="image/x-icon">
+    <script src="/script/Store.js"></script>
 </head>
+
 <body>
 
 
@@ -22,61 +26,76 @@
         <div class="LOGO">
             <span class="material-symbols-outlined">
                 local_activity
-                </span>
+            </span>
             <h1>E7gzli</h1>
         </div>
-          <div class="left-A">
-          <a  href="index">Home</a>
-          <a  href="Browse">Browse</a>
-          <a  href="Store">Store</a>
-         </div>
+        <div class="left-A">
+            <a href="index">Home</a>
+            <a href="Browse">Browse</a>
+            <a href="Store">Store</a>
+        </div>
 
-         <div class="R-A">
-            <a id="loginbutton"  href="login">Login</a>
-           </div>
+        <div class="R-A">
+            <a id="loginbutton" href="login">Login</a>
+            <div class="shopping" id="cart">
+                <img src="/materials/Cart.PNG" alt="Cart">
+                <span class="quantity">0</span>
+            </div>
+        </div>
     </div>
 
-
+    <div class="cart">
+        <h1>cart</h1>
+        <ul class="listcart">
+        </ul>
+        <div class="checkOut">
+            <div class="total">0</div>
+            <div class="closeShopping">Close</div>
+        </div>
+    </div>
 
 
     <div class="Store">
 
-    <button onclick="toggleTheme()" class="themer"></button>
+        <button onclick="toggleTheme()" class="themer"></button>
         <main>
             <div class="profile" onclick="expand(this)">
-                <div class="profile__banner" style="background-color: red;"></div>
+                <div class="profile__banner" name=" bannerColor" style="background-color: red;"></div>
                 <div>
-                    <div class="profile__pic">
+                    <div class="profile__pic" name="teamImage">
                         <img src="/materials/Ahly.jpeg" alt="Team1">
                     </div>
                     <div class="profile__info">
-                        <span class="profile__info-display">Al Ahly sc</span>
-                        <span class="profile__info-username">@AhlyStore</span>
+                        <span class="profile__info-display" name="teamName">Al Ahly sc</span>
+                        <span class="profile__info-username" name="teamUsername">@AhlyStore</span>
                     </div>
                 </div>
                 <div class="profile__data">
                     <span class="profile__data-following">
-                        <h1 id="head">History:</h1>
-                        <h2 id="sum">Al Ahly was established by students, including Omar Lotfy, who envisioned a space for leisure and exercise.
-                            Initially, it catered to high school students, providing a platform for social interaction and physical activities.
-                            With a total of 25 official continental titles, Al Ahly was rightfully named the African Club of the Century by CAF.
+                        <h1 id="head" name="historyTitle">History:</h1>
+                        <h2 id="sum" name="historyDescription">Al Ahly was established by students, including Omar Lotfy, who envisioned a space
+                            for leisure and exercise.
+                            Initially, it catered to high school students, providing a platform for social interaction
+                            and physical activities.
+                            With a total of 25 official continental titles, Al Ahly was rightfully named the African
+                            Club of the Century by CAF.
                         </h2>
 
 
 
-                        
-                        <div class="back">
-                        <img id="shirt" src="/materials/ahlytshirt.jpg">
-                        <h2>official t-shirt season 2022/2023</h2>
-                        <h2 style="color:green";>200 EGP</h2>
-                        <a  id="BUYNOW">BUY NOW</a>
-                    </div>
-                    </span>
-                   
-                    
-           
 
-                   
+                        <div class="back">
+                            <img id="shirt" name="productImage" src="/materials/ahlytshirt.jpg">
+                            <h2 name="productName">official t-shirt season 2022/2023</h2>
+                            <h2 name="productPrice" style="color:green" ;>200 EGP</h2>
+                            <a id="BUYNOW">BUY NOW</a>
+                        </div>
+                    </span>
+
+
+
+
+
                 </div>
             </div>
 
@@ -91,37 +110,39 @@
 
 
             <div class="profile" onclick="expand(this)">
-                <div class="profile__banner" style="background-color:white;"></div>
+                <div class="profile__banner" name=" bannerColor" style="background-color:white;"></div>
                 <div>
                     <div class="profile__pic">
-                        <img src="/materials/Zamalek.jpeg" alt="Team2">
+                        <img src="/materials/Zamalek.jpeg" name="teamImage" alt="Team2">
                     </div>
                     <div class="profile__info">
-                        <span class="profile__info-display">zamalek sc</span>
-                        <span class="profile__info-username">@zamalekStore</span>
+                        <span class="profile__info-display"  name="teamName">zamalek sc</span>
+                        <span class="profile__info-username"  name="teamUsername">@zamalekStore</span>
                     </div>
                 </div>
                 <div class="profile__data">
                     <span class="profile__data-following">
-                        <h1 id="head">History:</h1>
-                        <h2 id="sum">Zamalek Sporting Club, founded in 1911, is an Egyptian sports club based in Cairo. It’s known for its successful football team and has a rich history of domestic and international achievements. 🏆🔵⚪
+                        <h1  name="historyTitle" id="head">History:</h1>
+                        <h2  name="historyDescription" id="sum">Zamalek Sporting Club, founded in 1911, is an Egyptian sports club based in Cairo.
+                            It’s known for its successful football team and has a rich history of domestic and
+                            international achievements. 🏆🔵⚪
                         </h2>
 
 
 
-                        
-                        <div class="back">
-                        <img id="shirt" src="/materials/zamalek.jpg">
-                        <h2>official t-shirt season 2022/2023</h2>
-                        <h2 style="color:green";>200 EGP</h2>
-                        <a id="BUYNOW">BUY NOW</a>
-                    </div>
-                    </span>
-                   
-                    
-           
 
-                   
+                        <div class="back">
+                            <img id="shirt"  name="productImage"  src="/materials/zamalek.jpg">
+                            <h2  name="productName">official t-shirt season 2022/2023</h2>
+                            <h2  name="productPrice"  style="color:green" ;>200 EGP</h2>
+                            <a id="BUYNOW">BUY NOW</a>
+                        </div>
+                    </span>
+
+
+
+
+
                 </div>
             </div>
 
@@ -129,49 +150,53 @@
 
 
 
-			<div class="profile" onclick="expand(this)">
-                <div class="profile__banner" style="background-color: black;"></div>
+            <div class="profile" onclick="expand(this)">
+                <div class="profile__banner" name=" bannerColor" style="background-color: black;"></div>
                 <div>
                     <div class="profile__pic">
-                        <img src="/materials/Cairokee.jpg" alt="Band1">
+                        <img src="/materials/Cairokee.jpg" name="teamImage" alt="Band1">
                     </div>
                     <div class="profile__info">
-                        <span class="profile__info-display">Cairokee</span>
-                        <span class="profile__info-username">@Cairokee</span>
+                        <span class="profile__info-display"  name="teamName">Cairokee</span>
+                        <span class="profile__info-username"  name="teamUsername">@Cairokee</span>
                     </div>
                 </div>
                 <div class="profile__data">
                     <span class="profile__data-following">
-                        <h1 style="color:black"; id="head">History:</h1>
-                        <h2 id="sum">Cairokee is an Egyptian rock band that officially launched in 2003. They gained prominence after the 2011 Egyptian Revolution due to their politically-inspired lyrics and protest songs. Their unique blend of rock music with Egyptian influences has resonated with audiences both in Egypt and internationally. Cairokee continues to shape the sound of modern Arab rock. 🎸
+                        <h1  name="historyTitle" style="color:black" ; id="head">History:</h1>
+                        <h2  name="historyDescription" id="sum">Cairokee is an Egyptian rock band that officially launched in 2003. They gained
+                            prominence after the 2011 Egyptian Revolution due to their politically-inspired lyrics and
+                            protest songs. Their unique blend of rock music with Egyptian influences has resonated with
+                            audiences both in Egypt and internationally. Cairokee continues to shape the sound of modern
+                            Arab rock. 🎸
                         </h2>
 
 
 
-                        
-                        <div class="back">
-                        <img id="shirt" src="/materials/Cairokee-Logo-1-T-shirt-1200x1200.webp">
-                        <h2>Fan made t-shirt</h2>
-                        <h2 style="color:green";>150 EGP</h2>
-                        <a id="BUYNOW">BUY NOW</a>
-                    </div>
-                    </span>
-                   
-                    
-           
 
-                   
+                        <div class="back">
+                            <img id="shirt"  name="productImage"  src="/materials/Cairokee-Logo-1-T-shirt-1200x1200.webp">
+                            <h2  name="productName">Fan made t-shirt</h2>
+                            <h2  name="productPrice"  style="color:green" ;>150 EGP</h2>
+                            <a id="BUYNOW">BUY NOW</a>
+                        </div>
+                    </span>
+
+
+
+
+
                 </div>
             </div>
-			
-			
-            </div>
-			
-            </div>
 
 
-        </div>
-        </main>
+    </div>
+
+    </div>
+
+
+    </div>
+    </main>
 
 
 
@@ -187,4 +212,5 @@
 
 
 </body>
+
 </html>
