Fix delete button on admin

--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -21,35 +21,32 @@
 
 
 <div class="content">
-
-<% if (events.length > 0) { %>
+  <% if (events.length > 0) { %>
     <% events.forEach(function(event) { %>
-  
-        <div class="card">
-            <div class="side_img">
-                <img id="pic" src="<%= event.image %>">
-            </div>
-            <div class="side_info">
-                <div class="info">
-                    <span>Title: <%= event.title %></span>
-                    <span><%= event.description %></span> <br>
-                    <i class="fa-solid fa-calendar"></i>
-                    <span><%= event.date %></span>
-                    <span><%= event.location %></span>
-                </div>
-                <div class="button_dist">
-                    <h3>Tickets remaining: <%= event.totalTickets %></h3>
-                    <button class="delete-btn" data-id="<%= event._id %>">Delete</button>
-
-                    
-                      %>
-                </div>
-            </div>
+      <div class="card">
+        <div class="side_img">
+          <img id="pic" src="<%= event.image %>">
         </div>
-        <% }) %>
-<% }  %>
-
+        <div class="side_info">
+          <div class="info">
+            <span>Title: <%= event.title %></span>
+            <span><%= event.description %></span> <br>
+            <i class="fa-solid fa-calendar"></i>
+            <span><%= event.date %></span>
+            <span><%= event.location %></span>
+          </div>
+          <div class="button_dist">
+            <h3>Tickets remaining: <%= event.totalTickets %></h3>
+            <button  class="delete-btn" data-id="<%= event._id %>">Delete</button>
+          </div>
+        </div>
+      </div>
+    <% }) %>
+  <% } %>
 </div>
+
+
+
 
 <div class = "left-side">
 
@@ -123,33 +120,31 @@
 
 </div>
 
+
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const deleteButtons = document.querySelectorAll('.delete-btn');
-      deleteButtons.forEach(button => {
-        button.addEventListener('click', function(e) {
-          const eventId = e.target.getAttribute('data-id');
-          fetch('/delete-event/' + eventId, {
-            method: 'DELETE'
-          })
-          .then(response => response.json())
-          .then(data => {
-            if (data.success) {
-              // Remove the card element from the DOM
-              e.target.closest('.card').remove();
-            } else {
-              // Handle failure
-              alert('Error deleting event');
-            }
-          })
-          .catch(error => console.error('Error:', error));
-        });
+  document.addEventListener('DOMContentLoaded', function() {
+    const deleteButtons = document.querySelectorAll('.delete-btn');
+    deleteButtons.forEach(button => {
+      button.addEventListener('click', function(e) {
+        const eventId = e.target.getAttribute('data-id');
+        fetch(`/admin/delete-event/${eventId}`, {
+          method: 'DELETE'
+        })
+        .then(response => response.json())
+        .then(data => {
+          if (data.success) {
+            // Remove the card element from the DOM
+            e.target.closest('.card').remove();
+          } else {
+            // Handle failure
+            alert('Error deleting event');
+          }
+        })
+        .catch(error => console.error('Error:', error));
       });
     });
-  </script>
-  
-
-
+  });
+</script>
 
 
 </body>
