--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -38,7 +38,7 @@
     </ul>
     <div class="logouttt">
       <h3>Logout</h3>
-      <a id="log_out" class="logout_sidebutton" href="login"> Logout</a>
+      <a id="log_out" class="logout_sidebutton" href="/index"> Logout</a>
     </div>
   </div>
   <div class="Admin-Container">
