BookNow form retrieve data from db
retrieve data from database (still not working)

--- a/views/Browse.ejs
+++ b/views/Browse.ejs
@@ -80,7 +80,7 @@
                     <div class="button_dist">
                         <h3>Tickets remaining: <%= event.totalTickets %></h3>
                         <% if (event.totalTickets > 0) { %>
-                            <a id="booknowbtn" class="booking-btn">Book Now</a>
+                            <a id="booknowbtn" class="booking-btn" href="BookNow">Book Now</a>
                           <% } else { %>
                             <div class="button_dist2">
                                 <a id="finishbtn" class="booking-btn2">Booking Closed</a>
