--- a/views/Store.ejs
+++ b/views/Store.ejs
@@ -59,9 +59,10 @@
 
         <button onclick="toggleTheme()" class="themer"></button>
         <main>
-            <% if (team) { %>
+            <% if (team && team.length > 0) { %>
+                <% team.forEach(function(team) { %>
                 <div class="profile" onclick="expand(this)">
-                    <div class="profile__banner" name="bannerColor" > </div>
+                    <div class="profile__banner" name="bannerColor" style="background-color: <%= team.bannerColor %>;"> </div>
                     <div>
                         <div class="profile__pic" name="teamImage">
                             <img src="<%= team.teamImage %>" alt="Team1">
@@ -94,6 +95,7 @@
                         </span>
                     </div>
                 </div>
+                <% }) %>
                 <% } else { %>
                 <div class="emp">
                     <h1>Sorry No Merch to display :) </h1>
