--- a/views/BookNow.ejs
+++ b/views/BookNow.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E7gzli</title>
-    <link href="BookNow.css" rel="stylesheet">
+    <link href="/BookNow.css" rel="stylesheet">
     <script src="/script/BookNow.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,9 +46,9 @@
             <h1>E7gzli</h1>
         </div>
           <div class="left-A">
-          <a  href="index">Home</a>
-          <a  href="Browse">Browse</a>
-          <a  href="Store">Store</a>
+          <a  href="/index">Home</a>
+          <a  href="/Browse">Browse</a>
+          <a  href="/Store">Store</a>
          </div>
 
          <div class="R-A">
@@ -107,7 +107,7 @@
 
 
         <div class="Buttons">
-        <a href="Browse" id="CN">Cancel</a>
+        <a href="/Browse" id="CN">Cancel</a>
         <button id="BN">Buy Now</button>
         </div>
 
