--- a/views/Store.ejs
+++ b/views/Store.ejs
@@ -59,8 +59,7 @@
 
         <button onclick="toggleTheme()" class="themer"></button>
         <main>
-            <% if (team && team.length > 0) { %>
-                <% team.forEach(function(team) { %>
+            <% if (team) { %>
                 <div class="profile" onclick="expand(this)">
                     <div class="profile__banner" name="bannerColor" style="background-color: <%= team.bannerColor %>;"> </div>
                     <div>
@@ -95,7 +94,7 @@
                         </span>
                     </div>
                 </div>
-                <% }) %>
+               
                 <% } else { %>
                 <div class="emp">
                     <h1>Sorry No Merch to display :) </h1>
