updates of login

--- a/views/MyAccount.ejs
+++ b/views/MyAccount.ejs
@@ -46,7 +46,7 @@
 					
 					<span>Update Info</span>
 				</a>
-                <a onclick="logout()" id="logout">
+                <a  id="logout-link">
 					<span>Logout</span>
                 </a>
 			</nav>
